# get-public-key

./: CMakeLists.txt  CMakeSettings.json  README.md  build.sh  wasi_init.sh
shaders/: CMakeLists.txt  app.cpp  contract.cpp  contract.h  contract_sid.i  get_pub_key_app.wasm
unittests/: CMakeLists.txt  shader_test.cpp
